added a Makefile and a publish target
put token and sharetarget into private makefile

--- a/main.html
+++ b/main.html
@@ -43,7 +43,7 @@
         });
     </script>
 
-    <h1>TypeScript HTML App</h1>
+    <h1>Mite 2 VSO integration </h1>
 
     <div id="content"></div>
 </body>
