add click handler to save button

--- a/src/settings.html
+++ b/src/settings.html
@@ -20,7 +20,7 @@
       <input type="text" name="project_id"><br>
       Service Id: <br>
       <input type="text" name="service_id"><br>
-      <input type="button" value="Speichern" onClick="Settings.save(this.form)">
+      <input id="saveButton" type="button" value="Speichern">
     </form>
    <script type="text/javascript">
         // Initialize the VSS sdk
