--- a/src/main.html
+++ b/src/main.html
@@ -4,11 +4,10 @@
 <head>
     <meta charset="utf-8" />
     <title>Mite 2 VSO</title>
-    <link rel="stylesheet" href="css/app.css" type="text/css" />
     <script src="scripts/VSS.SDK.js"></script>
+    <!-- <script data-main="scripts/main" src="lib/require.js"></script> -->
 </head>
 <body>
-  <script src="scripts/main.js"></script>
    <script type="text/javascript">
         // Initialize the VSS sdk
         VSS.init();
