use bower to retrieve VSS file

--- a/main.html
+++ b/main.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <title>Mite 2 VSO</title>
     <!-- <link rel="stylesheet" href="css/app.css" type="text/css" /> -->
-    <script src="dist/lib/VSS.SDK.js"></script>
+    <script src="bower_components/vss-web-extension-sdk/lib/VSS.SDK.min.js"></script>
 
    <script type="text/javascript">
         // Initialize the VSS sdk
