--- a/settings.html
+++ b/settings.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8" />
     <title>Mite 2 VSO</title>
     <link rel="stylesheet" href="css/app.css" type="text/css" />
-    <script src="scripts/VSS.SDK.js"></script>
-    <script data-main="scripts/settings" src="lib/require.js"></script>
+    <script src="bower_components/vss-web-extension-sdk/lib/VSS.SDK.min.js"></script>
+    <script data-main="scripts/settings"></script>
 </head>
 <body>
     <h1>Mite 2 VSO integration settings</h1>
